--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation "com.android.support:support-fragment:28.0.0"
     implementation "com.squareup.picasso:picasso:2.4.0"
+
+    //2
+    implementation 'com.android.support:design:28.0.0'
 }
